# Lingua-Sound-Wave

./: .gitignore  .replit  CLAUDE.md  MEANING-MAP-ROUTINE.md  MEANING-MAP.md  MEANING_MAP.md  Makefile  NEXT_ROUTINE.md  NOTICE  PIPELINE.md  README.md  handover.md  package.json  pnpm-lock.yaml  read me first  replit.md  requirements.txt  setup.sh
research/homophone-bench/: .env.example  .gitignore  AUDIO_INVESTIGATION.md  AUTOPILOT_STATUS.md  BANK_COMPOSER.md  BOTHSIDE_HOP.md  CENTRAL_PROBLEM.md  CHAINGAME_SYNONYM.md  CHAINWEB_LESSONS.md  CORPUS_AND_COPYRIGHT.md  DATASET_STRATEGY.md  DATA_ANALYSIS.md  DEPS_RABBIT_AND_NOVEL.md  DICTIONARY_FEASIBILITY.md  DRIVE_TRAWL.md  DUAL_LADDER.md  DUAL_SCALE.md  ELISION_PROPOSAL.md  EXPERIMENTS_N1_N2_RABBIT.md  FILLER_CARVE_FINDING.md  FINAL_VERSE.md  FINE_INVENTORY.md  FRAGMENT_WEAVE_RESULTS.md  FRENCH_ANCHOR_AND_HOPS.md  GALLERY.md  GENERATION_ENGINE.md  GENERATION_PIPELINE.md  GENERATIVE_POET.md  HOMOPHONE_PRODUCTION_DEMO.md  HOPS_3TYPE.md  HOP_LLM.md  IDEAS.md  IDEAS_BABEL.md  JOKER_METHODS.md  JUDGE_ENSEMBLE.md  JUNCTURE_AND_FILLERS.md  JUNCTURE_RESCORE.md  L2_DECISION.md  LEARNING_REMINE_GRANULARITY.md  LIGHT_IN_TUNNEL.md  (+415 more)
research/homophone-bench/experiments/: results.jsonl
research/homophone-bench/homophone_bench/: __init__.py  cli.py
research/homophone-bench/input/: fable_1.txt  fable_2.txt  fable_3.txt  fable_4.txt  fable_5.txt
research/homophone-bench/logs/: CONVERSATION_2026-06-26.md
research/homophone-bench/methods/: README.md
research/homophone-bench/output/: homophonic_fable_1.tsv  homophonic_fable_1.txt  (+13 more)
(+170 files in other folders)
